# computer_vision_ROS2

./: CMakeLists.txt  README.md  context_prompt.txt  package.xml
dataset/: README.md
src/: cv_node.cpp
